Crash when having a scene strip in VSE that references a scene that has been deleted #84529

Closed
opened 2021-01-08 18:06:18 +01:00 by Sebastian Koenig · 6 comments

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.38

Blender Version
Broken: version:

  • 2.92.0 Alpha, branch: master, commit date: 2021-01-08 06:24, hash: f448ff2afe
  • 2.92.0 Alpha, branch: master, commit date: 2020-12-15 23:20, hash: 977bd7937a
  • Issue was introduced in commit fad80a95fd
    Worked:
  • 2.92.0 Alpha, branch: master, commit date: 2020-12-14 15:44, hash: 010f44b855
  • 2.91.0

Short description of error
The VSE crashes if it contains a strip that references a scene that already has been deleted.

Exact steps for others to reproduce the error
Open this file and try to switch to the video editing workspace.

vse_crash.blend

Alternatively:

  • Create a new scene and switch to it.
  • Open the Video Editing workspace.
  • Add the original scene Add > Scene > Scene.
  • Switch back to the original scene and delete it.
vsnprintf(unsigned char * const _Buffer, const unsigned __int64 _BufferCount, const unsigned char * const _Format, unsigned char * _ArgList) Line 1440	C
BLI_vsnprintf(unsigned char * buffer, unsigned __int64 maxncpy, const unsigned char * format, unsigned char * arg) Line 221	C
BLI_snprintf(unsigned char * dst, unsigned __int64 maxncpy, const unsigned char * format, ...) Line 273	C
draw_seq_text_get_source(Sequence * seq, unsigned char * r_source, unsigned __int64 source_len) Line 653	C
draw_seq_text_get_overlay_string(SpaceSeq * sseq, Sequence * seq, unsigned char * r_overlay_string, unsigned __int64 overlay_string_len) Line 675	C
draw_seq_text_overlay(View2D * v2d, Sequence * seq, SpaceSeq * sseq, float x1, float x2, float y1, float y2, bool seq_active) Line 710	C
draw_seq_strip(const bContext * C, SpaceSeq * sseq, Scene * scene, ARegion * region, Sequence * seq, float pixelx, bool seq_active) Line 1191	C
draw_seq_strips(const bContext * C, Editing * ed, ARegion * region) Line 1969	C
draw_timeline_seq(const bContext * C, ARegion * region) Line 2340	C
sequencer_main_region_draw(const bContext * C, ARegion * region) Line 529	C
ED_region_do_draw(bContext * C, ARegion * region) Line 551	C
wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 732	C
wm_draw_window(bContext * C, wmWindow * win) Line 875	C
wm_draw_update(bContext * C) Line 1074	C
WM_main(bContext * C) Line 642	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 526	C
**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.38 **Blender Version** Broken: version: - 2.92.0 Alpha, branch: master, commit date: 2021-01-08 06:24, hash: `f448ff2afe` - 2.92.0 Alpha, branch: master, commit date: 2020-12-15 23:20, hash: `977bd7937a` - Issue was introduced in commit fad80a95fd Worked: - 2.92.0 Alpha, branch: master, commit date: 2020-12-14 15:44, hash: `010f44b855` - 2.91.0 **Short description of error** The VSE crashes if it contains a strip that references a scene that already has been deleted. **Exact steps for others to reproduce the error** Open this file and try to switch to the video editing workspace. [vse_crash.blend](https://archive.blender.org/developer/F9555976/vse_crash.blend) Alternatively: - Create a new scene and switch to it. - Open the *Video Editing* workspace. - Add the original scene *Add > Scene > Scene*. - Switch back to the original scene and delete it. ```lines vsnprintf(unsigned char * const _Buffer, const unsigned __int64 _BufferCount, const unsigned char * const _Format, unsigned char * _ArgList) Line 1440 C BLI_vsnprintf(unsigned char * buffer, unsigned __int64 maxncpy, const unsigned char * format, unsigned char * arg) Line 221 C BLI_snprintf(unsigned char * dst, unsigned __int64 maxncpy, const unsigned char * format, ...) Line 273 C draw_seq_text_get_source(Sequence * seq, unsigned char * r_source, unsigned __int64 source_len) Line 653 C draw_seq_text_get_overlay_string(SpaceSeq * sseq, Sequence * seq, unsigned char * r_overlay_string, unsigned __int64 overlay_string_len) Line 675 C draw_seq_text_overlay(View2D * v2d, Sequence * seq, SpaceSeq * sseq, float x1, float x2, float y1, float y2, bool seq_active) Line 710 C draw_seq_strip(const bContext * C, SpaceSeq * sseq, Scene * scene, ARegion * region, Sequence * seq, float pixelx, bool seq_active) Line 1191 C draw_seq_strips(const bContext * C, Editing * ed, ARegion * region) Line 1969 C draw_timeline_seq(const bContext * C, ARegion * region) Line 2340 C sequencer_main_region_draw(const bContext * C, ARegion * region) Line 529 C ED_region_do_draw(bContext * C, ARegion * region) Line 551 C wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 732 C wm_draw_window(bContext * C, wmWindow * win) Line 875 C wm_draw_update(bContext * C) Line 1074 C WM_main(bContext * C) Line 642 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 526 C ```
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @tintwotin, @rjg

Added subscribers: @tintwotin, @rjg

@tintwotin since this was introduced by your patch, you might want to take a look at this.

@tintwotin since this was introduced by your patch, you might want to take a look at this.

This issue was referenced by 544e371908

This issue was referenced by 544e37190846cc077981f69a15fccf3aa3a590b5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-01-10 17:39:15 +01:00
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:15:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84529
No description provided.